Move ssl_redirect into a location
Fixes GH-1347

--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -134,9 +134,6 @@ server {
 <% if @maintenance -%>
   <%= @maintenance_value %>;
 <% end -%>
-<% if @ssl_redirect -%>
-  return 301 https://$host<% if @_ssl_redirect_port.to_i != 443 %>:<%= @_ssl_redirect_port %><% end %>$request_uri;
-<% end -%>
 <% if @index_files and @index_files.count > 0 and not @ssl_only -%>
   index <% Array(@index_files).each do |i| %> <%= i %><% end %>;
 <% end -%>
@@ -179,4 +176,10 @@ server {
   <%- @error_pages.keys.sort.each do |key| -%>
   error_page  <%= key %> <%= @error_pages[key] %>;
   <%- end -%>
+<% end -%>
+<% if @ssl_redirect -%>
+
+  location / {
+    return 301 https://$host<% if @_ssl_redirect_port.to_i != 443 %>:<%= @_ssl_redirect_port %><% end %>$request_uri;
+  }
 <% end -%>
