--- a/templates/server/location_header.erb
+++ b/templates/server/location_header.erb
@@ -77,3 +77,6 @@
     rewrite <%= rewrite_rule %>;
     <%- end -%>
 <% end -%>
+<% if @limit_zone -%>
+    limit_req zone=<%= @limit_zone %>;
+<% end -%>
