--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -74,7 +74,7 @@ http {
   default_type  application/octet-stream;
 <% if @log_format -%>
 <% @log_format.sort_by{|k,v| k}.each do |key,value| -%>
-  log_format <%= key %> '<%= value %>';
+  log_format <%= key %> <%= [value].flatten.map { |v| "'#{v}'" }.join(' ') %>;
 <% end -%>
 <% end -%>
 
