--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -331,6 +331,12 @@ stream {
   include <%= @conf_dir %>/streams-enabled/*;
 <% end -%>
 
+<% unless @stream_log_format.empty? -%>
+<% @stream_log_format.sort_by{|k,v| k}.each do |key,value| -%>
+  log_format <%= key %> '<%= value %>';
+<% end -%>
+<% end -%>
+
 <% if @stream_access_log.is_a?(Array) -%>
   <%- @stream_access_log.each do |log_item| -%>
   access_log <%= log_item %>;
