--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -330,19 +330,15 @@ stream {
 <% unless @confd_only -%>
   include <%= @conf_dir %>/streams-enabled/*;
 <% end -%>
-
 <% unless @stream_log_format.empty? -%>
-<% @stream_log_format.sort_by{|k,v| k}.each do |key,value| -%>
+
+<% @stream_log_format.sort.each do |key,value| -%>
   log_format <%= key %> '<%= value %>';
 <% end -%>
 <% end -%>
 
-<% if @stream_access_log.is_a?(Array) -%>
-  <%- @stream_access_log.each do |log_item| -%>
+<%- Array(@stream_access_log).each do |log_item| -%>
   access_log <%= log_item %><% if @stream_custom_format_log %> <%= @stream_custom_format_log%><% end %>;
-  <%- end -%>
-<% else -%>
-  access_log <%= @stream_access_log %><% if @stream_custom_format_log %> <%= @stream_custom_format_log%><% end %>;
 <% end -%>
 }
 <% end -%>
