Enable subdirectory hierarchy for client_body and proxy temp paths
Allow specification of up to three-level subdirectory hierarchy for
both [client_body_temp_path](https://nginx.org/en/docs/http/ngx_http_core_module.html#client_body_temp_path)
and [proxy_temp_path](https://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_temp_path) options

This allows for the existing string option to specify just the path as
it works now, and for an alternate type as an array with the first
element as the path, and the up to 3 additional integers for each level

- Updated docs
- Updated tests

Rubocop fix

Apply suggestions from code review

Co-authored-by: Ewoud Kohl van Wijngaarden <ewoud@kohlvanwijngaarden.nl>

Rubocop suggested fix

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -167,8 +167,8 @@ http {
   gzip_vary         <%= @gzip_vary %>;
 <% end -%>
 
-<% if @client_body_temp_path -%>
-  client_body_temp_path   <%= @client_body_temp_path %>;
+<% if @_client_body_temp_path -%>
+  client_body_temp_path   <%= @_client_body_temp_path.join(' ') %>;
 <% end -%>
 <% if @client_max_body_size -%>
   client_max_body_size    <%= @client_max_body_size %>;
@@ -179,8 +179,8 @@ http {
 <% if @proxy_redirect -%>
   proxy_redirect          <%= @proxy_redirect %>;
 <% end -%>
-<% if @proxy_temp_path -%>
-  proxy_temp_path         <%= @proxy_temp_path %>;
+<% if @_proxy_temp_path -%>
+  proxy_temp_path         <%= @_proxy_temp_path.join(' ') %>;
 <% end -%>
 <% if @proxy_connect_timeout -%>
   proxy_connect_timeout   <%= @proxy_connect_timeout %>;
