--- a/templates/server/locations/proxy.erb
+++ b/templates/server/locations/proxy.erb
@@ -68,6 +68,9 @@
 <% end -%>
 <% if @proxy_cache_lock -%>
     proxy_cache_lock         <%= @proxy_cache_lock %>;
+  <% end -%>
+<% if @proxy_cache_background_update -%>
+    proxy_cache_background_update <%= @proxy_cache_background_update %>;
 <% end -%>
 <% if @proxy_next_upstream -%>
     proxy_next_upstream      <%= @proxy_next_upstream %>;
