Add support for proxy_cache_convert_head
https://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_cache_convert_head

Signed-off-by: Christian Ruppert <idl0r@qasl.de>

--- a/templates/server/locations/proxy.erb
+++ b/templates/server/locations/proxy.erb
@@ -72,6 +72,9 @@
 <% if @proxy_cache_background_update -%>
     proxy_cache_background_update <%= @proxy_cache_background_update %>;
 <% end -%>
+<% if @proxy_cache_convert_head -%>
+    proxy_cache_convert_head <%= @proxy_cache_convert_head %>;
+<% end -%>
 <% if @proxy_next_upstream -%>
     proxy_next_upstream      <%= @proxy_next_upstream %>;
 <% end -%>
