--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -34,6 +34,28 @@ server {
   return       301 http://www.<%= s %>$request_uri;
   <%- end -%>
 <%- end -%>
+<% if @access_log.is_a?(Array) -%>
+  <%- @access_log.each do |log_item| -%>
+  access_log            <%= log_item %><% if @format_log %> <%= @format_log%><% end %>;
+  <%- end -%>
+<% elsif @access_log == 'absent' -%>
+<% elsif @access_log == 'off' -%>
+  access_log            off;
+<% elsif not @access_log -%>
+  access_log            <%= scope['::nginx::config::log_dir'] %>/<%= @name_sanitized %>.access.log<% if @format_log %> <%= @format_log%><% end %>;
+<% else -%>
+  access_log            <%= @access_log %><% if @format_log %> <%= @format_log%><% end %>;
+<% end -%>
+<% if @error_log.is_a?(Array) -%>
+  <%- @error_log.each do |log_item| -%>
+  error_log             <%= log_item %>;
+  <%- end -%>
+<% elsif @error_log == 'absent' -%>
+<% elsif not @error_log -%>
+  error_log             <%= scope['::nginx::config::log_dir'] %>/<%= @name_sanitized %>.error.log;
+<% else -%>
+  error_log             <%= @error_log %>;
+<% end -%>
 }
 
 <% end -%>
