--- a/templates/server/location_header.erb
+++ b/templates/server/location_header.erb
@@ -78,7 +78,9 @@
     <%- end -%>
 <% end -%>
 <% if @limit_zone -%>
-    limit_req zone=<%= @limit_zone %>;
+  <%- Array(@limit_zone).each do |lz| -%>
+    limit_req zone=<%= lz %>;
+  <%- end -%>
 <% end -%>
 <% if @reset_timedout_connection -%>
   reset_timedout_connection <%= @reset_timedout_connection %>;
